--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -28,6 +28,13 @@
   grid-template-columns: repeat(4, 9rem);
   grid-template-rows: repeat(4, 9rem);
   grid-gap: 1rem;
+  perspective: 1000px;
+}
+* .main #gameboard .card {
+  position: relative;
+  transform-style: preserve-3d;
+  transition: all 1s ease;
+  box-shadow: 0px 5px 15px;
 }
 * .main #gameboard .face {
   width: 100%;
@@ -36,9 +43,12 @@
      object-fit: cover;
   border: 5px solid orange;
   background: black;
+  position: absolute;
+  pointer-events: none;
 }
 * .main #gameboard .back {
   display: block;
+  position: absolute;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -46,4 +56,10 @@
   border: 5px solid orange;
   background-image: url(/assets/images/halloween-pumpkin-vector-21535932.jpg);
   background-size: cover;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  pointer-events: none;
+}
+* .main #gameboard .toggleCard {
+  transform: rotateY(180deg);
 }/*# sourceMappingURL=styling.css.map */
