--- a/CSS/styling.scss
+++ b/CSS/styling.scss
@@ -33,23 +33,40 @@
             grid-template-columns: repeat(4, 9rem);
             grid-template-rows: repeat(4, 9rem);
             grid-gap: 1rem;
+            perspective: 1000px;
+            
 
+            .card {
+                position: relative;
+                transform-style: preserve-3d;
+                transition: all 1s ease; // cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                box-shadow: 0px 5px 15px;
+            }
             .face {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 border: 5px solid orange;
                 background: black;
+                position: absolute;
+                pointer-events: none;
             }
 
             .back {
                 display: block;
+                position: absolute;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 border: 5px solid orange;
                 background-image: url(/assets/images/halloween-pumpkin-vector-21535932.jpg);
                 background-size: cover;
+                backface-visibility: hidden;
+                pointer-events: none;
+            }
+
+            .toggleCard {
+                transform: rotateY(180deg);
             }
             
         }
