--- a/CSS/styling.scss
+++ b/CSS/styling.scss
@@ -1,75 +1,207 @@
+// IMPORTING FONT FAMILY
+
 @import url('https://fonts.googleapis.com/css2?family=Nosifer&display=swap');
+
+
+// BODY, BACKGROUND AND FONTS STYLING 
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    font-family: 'Nosifer';
 
-    .gamename {
+    body{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      min-height: 100vh;
+      background-image: url(/assets/images/Scary-Halloween-Background-1-1.jpg);
+
+      .gamename {
         font-size: 38px;
         font-weight: bold;
         color: orange;
         text-align: center;
         margin: 20px;
         margin-top: 10px;
-        font-family: 'Nosifer';
         letter-spacing: 3px;
     }
 
-    body{
-        background-image: url(/assets/images/Scary-Halloween-Background-1-1.jpg);
-        background-size: cover;
-    }
-
-
-    .main{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-        #gameboard {
-            display: grid;
-            grid-template-columns: repeat(4, 9rem);
-            grid-template-rows: repeat(4, 9rem);
-            grid-gap: 1rem;
-            perspective: 1000px;
-            
-
-            .card {
-                position: relative;
-                transform-style: preserve-3d;
-                transition: all 1s ease; // cubic-bezier(0.175, 0.885, 0.32, 1.275);
-                box-shadow: 0px 5px 15px;
-            }
-            .face {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                border: 5px solid orange;
-                background: black;
-                position: absolute;
-                pointer-events: none;
-            }
-
-            .back {
-                display: block;
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                border: 5px solid orange;
-                background-image: url(/assets/images/halloween-pumpkin-vector-21535932.jpg);
-                background-size: cover;
-                backface-visibility: hidden;
-                pointer-events: none;
-            }
-
-            .toggleCard {
-                transform: rotateY(180deg);
-            }
-            
+    .details {
+      display: flex;
+      width: 50%;
+      align-items: center;
+      justify-content: space-between;
+      
+      .time{
+        font-size: 20px;
+        font-weight: bold;
+        color: orange;
+        letter-spacing: 2px;
+        b{
+          font-size: 27px;
+          color: red;
         }
+      }
 
+      .flips{
+        font-size: 20px;
+        font-weight: bold;
+        color: orange;
+        letter-spacing: 2px;
+        b{
+          font-size: 27px;
+        }
+      }
+
+      button {
+        border: none;
+        background: none;
+        font-size: 20px;
+        font-weight: bold;
+        color: orange;
+        cursor: pointer;
+        transition: 0.20s ease;
+      }
+
+      button:hover {
+        color: red;
+      }
     }
-}    
+    .gameboard {
+      display: flex;
+      justify-content: center;
+      width: 800px;
+      height: 800px;
+      padding: 25px;
+  }
+  }
+}
+
+// GLOBAL POSITION FOR CARDS 
+
+.cards, .card, .face{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+// CARDS STYLING 
+
+.cards{
+    height: 100%;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .card{
+      cursor: pointer;
+      position: relative;
+      perspective: 800px;
+      transform-style: preserve-3d;
+      height: calc(100% / 4 - 10px);
+      width: calc(100% / 4 - 10px);
+
+      .face{
+        width: 100%;
+        height: 100%;
+        user-select: none;
+        pointer-events: none;
+        position: absolute;
+        transition: 0.25s linear;
+        backface-visibility: hidden;
+        border: 5px solid orange;
+        box-shadow: 0px 5px 15px;
+        
+        .imagecard{
+          height: calc(100% / 1 - 0.1px);
+          width: calc(100% / 1 - 0.1px);
+          object-fit: cover;
+      }
+      
+        img{
+          width: 170px;
+          height: 170px;
+          object-fit: cover;
+      }
+    }
+    .back-side{
+      transform: rotateY(-180deg);
+    }
+  }
+}
+
+// SHAKE ANIMATION
+
+.card.bombom{
+    animation: shake 0.35s ease-in-out;
+}
+
+  @keyframes shake {
+    0%{
+      transform: rotate(0deg);
+    }
+    25%{
+      transform: rotate(15deg);
+    }
+    50%{
+      transform: rotate(0deg);
+    }
+    75%{
+      transform: rotate(-15deg);
+    }
+    100%{
+      transform: rotate(0deg);
+    }
+}
+
+// JAVA SCRIPT class "flip" 
+
+.card.flip .front-side{
+    transform: rotateY(180deg);
+}
+
+.card.flip .back-side{
+    transform: rotateY(0);
+}
+
+// RESPOMSIVE DESIGN 
+
+
+@media (max-width: 1536px) {
+
+  body{
+    overflow: hidden;
+  }
+  .cards{
+    height: 550px;
+    width: 550px;
+  }
+
+  .cards .card .face img{
+    width: 115px;
+    height: 115px;
+  }
+
+  .time{
+    font-size: 12px;
+    letter-spacing: 1px;
+    b{
+      font-size: 15px;
+    }
+  }
+
+  .flips{
+    font-size: 12px;
+    letter-spacing: 1px;
+    b{
+      font-size: 15px;
+    }
+  }
+
+  button {
+    font-size: 12px;
+  }
+}
